# CrisisIQ

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.json
CrisisIQ/: app.py  tasks.json
CrisisIQ/agent/: agent.py
CrisisIQ/data/: dataset_generator.py  tasks.json  test.py
CrisisIQ/env/: environment.py
CrisisIQ/evaluation/: evaluator.py  grader.py
CrisisIQ/scripts/: baseline_inference.py  test_api.py
agent/: agent.py  inference.py  prompt_templates.py
data/: dataset_generator.py  tasks.json
env/: environment.py  openenv.yaml
evaluation/: evaluator.py  grader.py
scripts/: run.py  test_env.py
server/: app.py
