[project]
name = "crisisiq"
version = "1.0.0"
description = "Crisis Intelligence & News Verification Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "pydantic",
    "pyyaml",
    "httpx",
    "openenv-core>=0.2.0",
]
 
[project.scripts]
server = "server.app:main"
 
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
 
[tool.setuptools.packages.find]
where = ["."]
